k8s-manifests/contig-alias/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contig-alias-prod
  labels:
    environment: production
